--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
     "electron-devtools-installer": "^4.0.0",
     "electron-updater": "^6.3.9",
