--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "electron-devtools-installer": "^4.0.0",
     "electron-updater": "^6.3.9",
+    "react-chartjs-2": "^5.3.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
