--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
+    "dotenv": "^16.4.7",
     "electron-devtools-installer": "^4.0.0",
+    "electron-store": "^10.0.1",
     "electron-updater": "^6.3.9",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
@@ -52,5 +55,30 @@
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.0.6",
     "vite": "^6.1.0"
+  },
+  "build": {
+    "files": [
+      "dist/",
+      "src/main/**/*",
+      "node_modules/**/*",
+      ".env"
+    ],
+    "extraResources": [
+      {
+        "from": ".env",
+        "to": ".env"
+      }
+    ],
+    "makers": [
+      {
+        "name": "@electron-forge/maker-squirrel",
+        "platforms": [
+          "win32"
+        ],
+        "config": {
+          "includeSubNodeModules": true
+        }
+      }
+    ]
   }
 }
