--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "build/icon.ico"
+      "icon": "src/renderer/src/assets/icon.ico"
     }
   }
 }
