--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
       "package.json"
     ],
     "win": {
-      "target": "nsis",
-      "icon": "src/renderer/src/assets/icon.ico"
+      "icon": "build/icon.ico",
+      "target": "nsis"
     }
   }
 }
