--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "electron-devtools-installer": "^4.0.0",
     "electron-store": "^10.0.1",
     "electron-updater": "^6.3.9",
+    "pdf-lib": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-icons": "^5.4.0",
