remove signing in packagejson

--- a/package.json
+++ b/package.json
@@ -71,9 +71,7 @@
     ],
     "win": {
       "icon": "./build/icon.ico",
-      "target": "nsis",
-      "sign": false
-    },
-    "forceCodeSigning": false
+      "target": "nsis"
+    }
   }
 }
