Revert "remove signing in packagejson"
This reverts commit b9d30dcbeb60dc695be136db343caecd69af0861.

--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     ],
     "win": {
       "icon": "./build/icon.ico",
-      "target": "nsis"
-    }
+      "target": "nsis",
+      "sign": false
+    },
+    "forceCodeSigning": false
   }
 }
