--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "electron-devtools-installer": "^4.0.0",
     "electron-store": "^10.0.1",
     "electron-updater": "^6.3.9",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-usb": "^3.0.0-alpha.4",
     "pdf-lib": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
