--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "adm-zip": "^0.5.16",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "electron-devtools-installer": "^4.0.0",
     "electron-store": "^10.0.1",
     "electron-updater": "^6.3.9",
+    "html2canvas": "^1.4.1",
     "pdf-lib": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
