fix dashboard chart

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "files": [
       "out/**/*",
       "node_modules/**/*",
-      "package.json"
+      "package.json",
+      "build/**/*"
     ],
     "win": {
       "target": [
