--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "electron-store": "^10.0.1",
     "electron-updater": "^6.3.9",
     "html2canvas": "^1.4.1",
+    "papaparse": "^5.5.2",
     "pdf-lib": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
