--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "react-chartjs-2": "^5.3.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0"
   },
