--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,5 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": ["Qrcode", "Toastify"]
+  "cSpell.words": ["lexile", "Qrcode", "Toastify"]
 }
