--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "javascript-obfuscator": "^4.2.1",
     "postcss": "^8.5.2",
     "prettier": "3.5.3",
     "react": "^18.3.1",
