--- a/package.json
+++ b/package.json
@@ -85,6 +85,10 @@
     "win": {
       "icon": "./build/icon.ico",
       "target": "nsis"
+    },
+    "linux": {
+      "icon": "./build/icon.ico",
+      "target": "nsis"
     }
   }
 }
