--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@recharts/devtools": "^0.0.5",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-table": "^8.21.2",
@@ -34,18 +35,22 @@
     "electron-store": "^10.0.1",
     "electron-updater": "^6.3.9",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.562.0",
     "papaparse": "^5.5.2",
     "pdf-lib": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^16.5.0",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.3",
+    "recharts": "^3.6.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
