feat: update build configuration for Windows and add portable target support

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -12,6 +12,9 @@ asarUnpack:
   - resources/**
 win:
   executableName: myapp
+  target:
+    - nsis
+  signAndEditExecutable: false
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
